--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ img {
     color: #FFFFFF;
 }
 
+#intro h1 {
+    margin-bottom: 10vh;
+}
+
 #news {
     background-color: #FFFFFF;
     padding: 20px;
@@ -192,13 +196,13 @@ h5 {
 .ml4 {
     position: relative;
     font-weight: 900;
-    font-size: 4.5em;
+    font-size: 2.5em;
   }
   .ml4 .letters {
     position: absolute;
     margin: auto;
     left: 0;
-    top: 0.3em;
+    top: -10vh;
     right: 0;
     opacity: 0; 
   }
