--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    max-width: 100%;
 }
 
 
@@ -146,7 +147,8 @@ h5 {
     margin-bottom: 5%;
 }
 
-#stream, #board {
+#stream,
+#board {
     flex: 1;
     box-sizing: border-box;
 }
@@ -195,14 +197,14 @@ h5 {
 
 .ml4 {
     position: relative;
-    font-weight: 900;
     font-size: 2.5em;
-  }
-  .ml4 .letters {
+}
+
+.ml4 .letters {
     position: absolute;
     margin: auto;
     left: 0;
     top: -10vh;
     right: 0;
-    opacity: 0; 
-  }
+    opacity: 0;
+}
